<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/tv_game_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@id/tv_game_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="03:45" />

    <TextView
        android:id="@+id/tv_game_round"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_game_timer"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5/7" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_game_timer,tv_game_round" />

    <TextView
        android:id="@+id/tv_game_title"
        style="@style/Theme.Hangman.Text.H5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/game_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_status" />

    <ImageView
        android:id="@+id/iv_hangman_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_32"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="@dimen/game_hangman_max_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_game_title"
        app:srcCompat="@drawable/hangman_10"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginBottom="@dimen/dimen_16"
        app:layout_constraintBottom_toTopOf="@id/barrier_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_hangman_game"
        tools:listitem="@layout/item_char" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btn_game_hint,btn_game_next" />

    <Button
        android:id="@+id/btn_game_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/game_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_game_next"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_game_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/game_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_game_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>
